tests/snapshots/run_wpt_conformance__trtx_add_float32_2D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "add.https.any.js",
    "add float32 2D tensors",
    "trtx",
    "PASS",
)
